--- a/report/sections/ch6-discussion.tex
+++ b/report/sections/ch6-discussion.tex
@@ -6,19 +6,19 @@
 \end{figure}
 %TODO: Elaborate on the figure above
 
-During the initial stages of the project the goal was that we developed an autonomous mapping vehicle. Unfortunately there were many complications and set-backs preventing us from achieving the original goal. 
-Early in the project we decided that ROS would be the core of our prototype, because at the time it seemed like the most optimal choice for our main operating system. There is a lot of documentation and resources about ROS and people had also previously successfully run ROS and created maps using SLAM on the Raspberry Pi.
+During the initial stages of the project the goal was that we wanted to develop an autonomous mapping vehicle. Unfortunately there were many complications and set-backs preventing us from achieving the original goal. 
+Early on in the project we decided that ROS would be the core of our prototype, because at the time it seemed like the most optimal and most powerful choice for our main operating system. One of the reasons being that there is a lot of documentation and resources about ROS, and people had also previously successfully run ROS and created maps using SLAM on the Raspberry Pi.
 
 The ROS installation process proved to be quite the challenge, which then lead to a setback in terms of development. Many of the ROS packages caused different conflicts with Raspbian, even though these packages should somewhat have worked out-the-box. After spending too much time on fixing the many errors and getting it to work on Raspbian, we decided to switch to Ubuntu ARM, where the installation process was a breeze compared to previously.
 
-Using the $I_2C$ interface on the Raspberry Pi we were able to gather measurement data from the Lidar, transmitting this and interepting this data was the next big issue that was encountered using ROS. Many of the resource available regarding gathering data from Lidars were regarding USB-based devices. %expand 
+Using the $I_2C$ interface on the Raspberry Pi we were able to gather measurement data from the Lidar, the next big issue we then encountered was transmitting the gathered data and interpreting it using ROS. Many of the resource regarding gathering data from Lidars were regarding USB-based devices. %expand 
 
 %In the beginning of our development period we had some downtime caused by shipping times.
 
 We then at this point realised that we would not have the time and resource to able to make a completely autonomous vehicle, so we instead decided to split the prototype into two separate parts: Navigation and Mapping.\\
 What we then aimed to achieve with the Lidar was to produce a map using SLAM. %Add more here, when we know how well it went.
 
-The close proximity detection system, is a low-intelligence autonomous navigation system for the rover. If we succeeded in completing our original scope, the autonomous navigation would have needed to interface with sensors to ensure that it avoided objects at height which is not recorded by the Lidar and mapping algorithms.So what we have currently achieved is a navigation system that is able to successfully navigation between obstacles by avoiding them and recalculating its direction.\\
+The close proximity detection system, is a low-intelligence autonomous navigation system for the rover. If we succeeded in completing our original scope, the autonomous navigation would have needed to interface with sensors to ensure that it avoided objects at a height that is not recorded by the Lidar and mapping algorithms. So what we have currently achieved is a navigation system that is able to successfully navigate between obstacles by avoiding them and recalculating its direction according to where it detected the obstacles.\\
 
 During testing we observed a couple of key-flaws in terms of the close proximity detection systems performance.
 As described in the testing chapter, the rover would at times get stuck in corners due to the equality of the measurements recorded by the ultrasonic sensors. Whenever the ultrasonic sensors mounted on either side of the rover would have their distance threshold exceeded the rover would continuously try to turn to left, hit the one wall of the corner, and then immediately attempt to turn right, hitting the other wall. This can be fixed by changing the code, so that it reverses the rover when the threshold for the side mounted sensors is exceeded. Currently the rover takes three measurements, and then afterwards compares them in the same sequence: \textit{Left > Right > Center}. This unfortunately always prioritizes turning left, compared to other choices. Optimally the code should be structured to that the navigation algorithm consists of multiple phases, so that the rover takes measurements in the first phase and before making a directional decision it compares the measurements to each other in the second phase. When the measurements have been compared, the rover then knows what direction would be the optimal to turn towards, in the third phase the measured distance would be compared to a threshold distance, depending on the return from the comparison the rover would then adjust its direction.
