--- a/report/citations.bib
+++ b/report/citations.bib
@@ -443,3 +443,16 @@
 	title={Information on RVIZ},
 	howpublished="\url{http://wiki.ros.org/rviz}"
 }
+
+@MISC{pibot,
+	title={Robot Cartography: ROS + SLAM},
+	month = nov,
+	year = {2010},
+	howpublished="\url{http://www.pirobot.org/blog/0015/}"
+}
+@MISC{pibotbook,
+	title={ROS By Example INDIGO - Volume 1},
+	month = jan,
+	year = {2015},
+	howpublished="\url{http://www.lulu.com/shop/r-patrick-goebel/ros-by-example-indigo-volume-1/ebook/product-22015937.html}"
+}
