--- a/report/sections/ch6-discussion.tex
+++ b/report/sections/ch6-discussion.tex
@@ -7,7 +7,7 @@
 %TODO: Elaborate on the figure above
 
 During the initial stages of the project the goal was that we wanted to develop an autonomous mapping vehicle. Unfortunately there were many complications and set-backs preventing us from achieving the original goal. 
-Early on in the project we decided that ROS would be the core of our prototype, because at the time it seemed like the most optimal and most powerful choice for our main operating system. One of the reasons being that there is a lot of documentation and resources about ROS, and people had also previously successfully run ROS and created maps using SLAM on the Raspberry Pi.
+Early on in the project we decided that ROS would be the core of our prototype, because at the time it seemed like the most optimal and most powerful choice for our main operating system. One of the reasons being that there is a lot of documentation and resources about ROS, and people had also previously successfully run ROS and created maps using SLAM on the Raspberry Pi.\cite{pibot}\cite{pibotbook}
 
 The ROS installation process proved to be quite the challenge, which then lead to a setback in terms of development. Many of the ROS packages caused different conflicts with Raspbian, even though these packages should somewhat have worked out-the-box. After spending too much time on fixing the many errors and getting it to work on Raspbian, we decided to switch to Ubuntu ARM, where the installation process was a breeze compared to previously.
 
