--- a/report/sections/ch3-problemanalysisconclusion.tex
+++ b/report/sections/ch3-problemanalysisconclusion.tex
@@ -1,8 +1,8 @@
 \section{Conclusion of Problem Analysis}
 
-During the research for this project, we have decided on what technologies we will use for solving the problem stated in the W-diagram\ref{fig:wdiagram}.
+During the research for this project, we have decided on what technologies we will use for solving the problem stated in the W-diagram \ref{fig:wdiagram}.
 
-We will use a rover with multiple sensors to navigate around in a set environment. This rover will produce a 2D map of its surroundings, with the possibility of implementing equipment for 3D mapping. We will use both sound and light sensors for navigation and mapping. Ultrasonic-sensors will be used for close encounter manoeuvres for their high precision at a close range (up to 4m)\cite{ultra} and a optical flow sensor will be used to measure the distance travelled. For mapping we will be using a laser sensor, that will either automatically turn 360$^{\circ}$ or we will implement a motor to rotate the sensor.
+We will use a rover with multiple sensors to navigate around in a set environment. This rover will produce a 2D map of its surroundings, with the possibility of implementing equipment for 3D mapping. We will use both sound and light sensors for navigation and mapping. Ultrasonic-sensors will be used for close encounter manoeuvres for their high precision at a close range (up to 4m)\cite{hcsr40datesheet} and a optical flow sensor will be used to measure the distance travelled. For mapping we will be using a laser sensor, that will either automatically turn 360$^{\circ}$ or we will implement a motor to rotate the sensor.
 
 The rover will both be remote controlled and autonomous for navigation. For reference points we will use the optical flow sensor, located on the bottom of the vehicle to help determine our current location and the distance travelled from the starting location.
 
