--- a/report/sections/ch5-testing.tex
+++ b/report/sections/ch5-testing.tex
@@ -73,6 +73,7 @@ Because of the skewed angles of the object in the test course, the rover would s
 
 When the rover would turn to avoid objects or change its direction, it would skid across the floor. This resulted in the rover not turning on the spot, which reduces the accuracy of the steering.
 
+%------------------------------------------------------------------
 \clearpage
 \section{2D Mapping}
 
@@ -105,7 +106,7 @@ Just from this very rough overlayed picture, it is easy to see that our map keep
 
 Whatever
 
-\begin{figure}
+\begin{figure}[H]
 	content...
 \end{figure}
 
