--- a/report/citations.bib
+++ b/report/citations.bib
@@ -238,10 +238,16 @@
 }
 
 @MISC{GPS1,
+	title = {What is a GPS? How does it work?},
+	month = Jun,
+	year = {2011},
 	howpublished = "\url{http://www.loc.gov/rr/scitech/mysteries/global.html}"
 }
 
 @MISC{GPS2,
+	title = {Dead stars 'to guide spacecraft'},
+	month = Mar,
+	year = {2012},
 	howpublished = "\url{http://www.bbc.com/news/science-environment-17557581}"
 }
 
@@ -250,15 +256,15 @@
 }
 
 @MISC{photo,
+	title = {The Basics of Photogrammetry},
 	howpublished = "\url{http://www.geodetic.com/v-stars/what-is-photogrammetry.aspx}"
 }
 
 @MISC{reference,
+	title = {Georeferencing: a review of methods and applications},
+	month = jan,
+	year = {2014},
 	howpublished = "\url{http://www.tandfonline.com/doi/full/10.1080/19475683.2013.868826#abstract}"
-}
-
-@MISC{ultra,
-	howpublished = "\url{http://www.micropik.com/PDF/HCSR04.pdf}"
 }
 
 @MISC{planetstemp,
