added some more

--- a/report/sections/ch5-testing.tex
+++ b/report/sections/ch5-testing.tex
@@ -78,7 +78,7 @@ When the rover would turn to avoid objects or change its direction, it would ski
 \section{2D Mapping}
 
 \subsection{Room test}
-In order to test how well our mapping can keep the relation between objects, we made a small setup on a table.
+In order to test how well our mapping can keep the relation between objects, we made a small setup on a table. We placed the laser on the edge of the table, and set a laptop, a small box, and two sponges, at varing distances from the center of the laser, trying to keep their faces perpendicular to the laser. We then roughly measured the distances.
 
 \begin{figure}[H]
 	\centering
@@ -87,7 +87,7 @@ In order to test how well our mapping can keep the relation between objects, we 
 	\label{fig:internallidar}
 \end{figure}
 	
-This figure shows what the setup was, with the addition of some distances.
+This figure shows an overead view what the setup was, with the addition of some distances.
 
 
 \begin{figure}[H]
