transition into result better

--- a/report/sections/ch5-testing.tex
+++ b/report/sections/ch5-testing.tex
@@ -88,7 +88,8 @@ In order to test how well our mapping can keep the relation between objects, we 
 \end{figure}
 	
 This figure shows an overead view what the setup was, with the addition of some distances.
-
+We let the laser gather a bit of data, until there was no noticable interference from us moving around, and then we took a picture of the map that had been produced.
+We took this map and compared it to the above overhead picture. First by estimating distances on the picture, then by digitally overlaying the two images.
 
 \begin{figure}[H]
 	\centering
