--- a/report/sections/ch6-discussion.tex
+++ b/report/sections/ch6-discussion.tex
@@ -4,10 +4,10 @@
 	\caption{Diagram of the modules we have developed}
 	\label{fig:developmentdiagram2}
 \end{figure}
-%TODO: Elaborate on the figure above
 
-During the initial stages of the project the goal was that we wanted to develop an autonomous mapping vehicle. Unfortunately there were many complications and set-backs preventing us from achieving the original goal. 
- we decided that ROS would be the core of our prototype, because at the time it seemed like the most optimal and most powerful choice for our main operating system. One of the reasons being that there is a lot of documentation and resources about ROS, and people had also previously successfully run ROS and created maps using SLAM on the Raspberry Pi.\cite{pibot}\cite{pibotbook}
+The figure above represents the actual implementation of the mapping and navigation system that we built during the development phase of the project. Compared to the initial plans, the \textit{optical flow} sensors was not implemented due to lack of time and low priority of the feature in hand. The \textit{remote} module was completely left out of the development process for the same reason as the optical flow sensor. Due to an overwhelming time spent on ROS and the laser sensor, we did not manage to create a fully autonomous navigation system, therefore we only implemented collision detection.
+
+During the initial stages of the project the goal was that we wanted to develop an autonomous mapping vehicle. Unfortunately there were many complications and set-backs preventing us from achieving the original goal. We decided that ROS would be the core of our prototype, because at the time it seemed like the most optimal and most powerful choice for our main operating system. One of the reasons being that there is a lot of documentation and resources about ROS, and people had also previously successfully run ROS and created maps using SLAM on the Raspberry Pi.\cite{pibot}\cite{pibotbook}
 
 Early on in the project we decided that ROS would be the core of our prototype, because at the time it seemed like the most optimal choice for our main operating system. One of the reasons being that there is a lot of documentation and resources about ROS, and people had also previously successfully run ROS and created maps using SLAM on the Raspberry Pi.
 
@@ -25,11 +25,9 @@ The close proximity detection system, is a low-intelligence autonomous navigatio
 During testing we observed a couple of key-flaws in terms of the close proximity detection systems performance.
 As described in the testing chapter, the rover would at times get stuck in corners due to the equality of the measurements recorded by the ultrasonic sensors. Whenever the ultrasonic sensors mounted on either side of the rover would have their distance threshold exceeded the rover would continuously try to turn to left, hit the one wall of the corner, and then immediately attempt to turn right, hitting the other wall. This can be fixed by changing the code, so that it reverses the rover when the threshold for the side mounted sensors is exceeded. Currently the rover takes three measurements, and then afterwards compares them in the same sequence: \textit{Left > Right > Center}. This unfortunately always prioritizes turning left, compared to other choices. Optimally the code should be structured to that the navigation algorithm consists of multiple phases, so that the rover takes measurements in the first phase and before making a directional decision it compares the measurements to each other in the second phase. When the measurements have been compared, the rover then knows what direction would be the optimal to turn towards, in the third phase the measured distance would be compared to a threshold distance, depending on the return from the comparison the rover would then adjust its direction.
 Changing the algorithm to something more similar to the one stated above, would add another level of intelligence to the rover, making it more flexible in terms of navigation and decision-making in other situations.
-The rover is currently operated by using four DC motors with regular rubber wheels mounted too them. At this time we do not have precise control of how far the rover moves each time it is powered on.
-%TODO: not true, we have encoders on the front wheels for that.
- The rover also does not turn consistently each time, which is either an issue with uneven weight distribution on the rover or because of inaccuracy with the signalling.
+The rover is currently operated by using four DC motors with regular rubber wheels mounted too them. At this time we do not have precise control of how far the rover moves each time it is powered on. The rover also does not turn consistently each time, which is either an issue with uneven weight distribution on the rover or because of inaccuracy with the signalling.
 To increase the accuracy of the distance moved, encoders for the DC motors can used to determine the distance travelled.
-%TODO: this is what I'm talking above.
+%TODO: Switch up sentances to make sure it is understood that encoders can be used and are installed, but just not used
  In terms of improving how well the rover turns, the rover needs to be balanced and the amount each wheels turns by cycle needs to be determined. Another possible solution for the turning inconsistency is using tracks for movement instead of four independently operated wheels. Tracks would have a larger guarantee %TODO: what?
 
 %TODO:add part about SLAM testing
