--- a/report/sections/appendix.tex
+++ b/report/sections/appendix.tex
@@ -1,4 +1,10 @@
 \section{Code for close proximity detection}
 \lstinputlisting[firstline=1, lastline=161, title=getdist(), language=Python, label=obs-avoid-code]{../code/autonomous-rover/obstacle-avoidance-args.py}
 
+\section{Code of laser sensor module}
+\lstinputlisting[firstline=37, title=mainCode.cpp, language=C++]{../code/laser_scan_publisher_tutorial/src/laser_scan_publisher.cpp}
+
+%TODO: Any more code to add?
+
+
 
