Some additions to testing

--- a/report/citations.bib
+++ b/report/citations.bib
@@ -462,3 +462,8 @@
 	year = {2015},
 	howpublished="\url{http://www.lulu.com/shop/r-patrick-goebel/ros-by-example-indigo-volume-1/ebook/product-22015937.html}"
 }
+
+@MISC{ros,
+	title={ROS.org},
+	howpublished="\url{http://www.ros.org/install/}"
+}
