preliminary perspective stuff

--- a/report/sections/ch8-perspective.tex
+++ b/report/sections/ch8-perspective.tex
@@ -1,1 +1,19 @@
-perspective 
+\section{Perspective}
+Due to our big scope, and issues we ran into during development, we did not achieve one full prototype. Rather, we achieved two separate prototypes that showcase separate aspects of our scope. The first thing that is necessary for the continuation of development is to combine these two prototypes. Only then will we have a clear idea of what our prototype is capable of, and what would need to be worked on for the full product.
+
+However, the laser we build does not fully work as a proof-of-concept. Before putting the two prototypes together, it is necessary to vastly increase the speed at which the laser can make measurements. Once that is done, we can attempt to get SLAM to work properly.
+
+With SLAM working, it is quite simple to put the two prototypes together and get a much better proof-of-concept for our scope. Of course, with the two prototypes together, many adjustments can be made for them to work better, such as the navigation reading the map to know where it has already mapped, and where it should try to map next.
+
+This proof-of-concept is still only for 2D-mapping, and we would like to use this technology in other planets and umapped territory in the earth. For that task, 3D-mapping is a much better fit. In order to expand our combined prototypes into a 3D capable mapper, we would need a combination of stereoscopic vision, barometric sensors, or any sort of other sensor that can give a height reading. Furthermore, our laser is mostly made for mapping of surfaces that are normal to te direction of the laser, this would not work very well on sloping hills that is found on most uninhabbited places.
+
+
+%Getting SLAM to work
+    %Since we did not succed completely to get SLAM working, it is a logical step to take.
+
+%Combining the autonomy and the mapping
+
+%Expanding to 3D mapping
+
+%Cost effectiveness
+    %We didn't consider the cost effectiveness
