fixed error in citations

--- a/report/citations.bib
+++ b/report/citations.bib
@@ -394,7 +394,7 @@
 	title = {How can I get faster acquisition than 50Hz?},
 	month = mar,
 	year = {2015},
-	howpublished="\url{http://kb.pulsedlight3d.com/support/solutions/articles/5000583786-how-can-i-get-faster-acquisition-than-50hz-}
+	howpublished="\url{http://kb.pulsedlight3d.com/support/solutions/articles/5000583786-how-can-i-get-faster-acquisition-than-50hz-}"
 }
 
 @MISC{i2csetup,
