--- a/report/citations.bib
+++ b/report/citations.bib
@@ -467,3 +467,13 @@
 	title={ROS.org},
 	howpublished="\url{http://www.ros.org/install/}"
 }
+@MISC{opti_using,
+	title={Optical Flow Using Color Information: Preliminary Results},
+	howpublished="\url{http://www.dca.ufrn.br/~adelardo/artigos/SAC08.pdf}"
+}
+
+@MISC{opti_datasheet,
+	title={High-Performance Optical Mouse Sensor (ADNS-3080)},
+	howpublished="\url{http://people.ece.cornell.edu/land/courses/ece4760/FinalProjects/s2009/ncr6_wjw27/ncr6_wjw27/docs/adns_3080.pdf
+}"
+}
