--- a/report/sections/ch3-problemanalysisconclusion.tex
+++ b/report/sections/ch3-problemanalysisconclusion.tex
@@ -6,7 +6,7 @@ We will use a rover with multiple sensors to navigate around in a set environmen
 
 The rover will both be remote controlled and autonomous for navigation. For reference points we will use the optical flow sensor, located on the bottom of the vehicle to help determine our current location and the distance travelled from the starting location.
 
-The control computer will be a Raspberry Pi running an optimized version of the Debian Linux operating system, called Raspbian. On top of the operating system, we will install the ROS (Robot Operating System) framework, which provides libraries and tools to help software developers create robot applications\cite{ros}. %TODO: Add missing cite here
+The control computer will be a Raspberry Pi running an optimized version of the Debian Linux operating system, called Raspbian. On top of the operating system, we will install the ROS (Robot Operating System) framework, which provides libraries and tools to help software developers create robot applications\cite{ros}.
 The reason for using the Raspberry Pi is that it can multi-task, read many sensors at the same time and build the 2D map on the go. Whereas for other microcontrollers, like the Arduino, we would only be able to collect data and need to build the map from it later, using another computer.
 
 \begin{figure}[H]
