--- a/report/sections/ch3-requirements.tex
+++ b/report/sections/ch3-requirements.tex
@@ -22,7 +22,7 @@ This section outlines the requirements for both the prototype that we are aiming
 \begin{enumerate}
 	
 	\item The rover can be controlled using a remote device.
-	\item The rover should navigate autonomously through a maze. %TODO: How do WE define a maze? (Thomas: We should discuss this)
+	\item The rover should navigate autonomously through a maze.
 	\item The laser sensor should make a usable 2D map of its surroundings.
 	
 \end{enumerate}
