--- a/report/sections/ch4-build.tex
+++ b/report/sections/ch4-build.tex
@@ -54,15 +54,18 @@ The enclosure design required a high-end 3D printer due to its size and print ti
 
 The idea of using a separate enclosure driven by a stepper motor to rotate the laser sensor is to constantly get a 360$\degree$ map of the environment by rotating the sensor separately from the chassis, rather than rotating the chassis to do so. This way, we can also continue to update the map while the rover is on the move. The strength behind using a stepper motor is that it is possible to control each step with great precision, which makes it more reliable when rotating it.
 
-%TODO: Write about assembly | of what???
 The project ended up being assembled in two separate parts: The rover with the ultrasonic sensors and the LIDAR-Lite laser sensor module by itself.
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=.6\linewidth]{images/build_ultrasonic.jpg}
+	\caption{The final prototype for the rover}
+	\label{rover_prototype_pic}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=.6\linewidth]{images/lidarpi.jpg}
+	\caption{The final prototype for the Lidar}
+	\label{lidar_prototype_pic}
 \end{figure}
